redesign, session has problems, must check

--- a/Private/Localization/en.json
+++ b/Private/Localization/en.json
@@ -3,6 +3,12 @@
 	"usuario": "User",
 	"contrasena" : "Password",
 	"login": "Log in"
+	},
+"admin-register" : {
+	"user": "User",
+	"pass" : "Password",
+	"register": "Sign up",
+	"email": "Email",
+	"formTitle": "Register form"
 	}
-
 }
