login shows option to continue session

--- a/Private/Localization/en.json
+++ b/Private/Localization/en.json
@@ -2,7 +2,10 @@
 "admin-login" : {
 	"usuario": "User",
 	"contrasena" : "Password",
-	"login": "Log in"
+	"login": "Log in",
+	"alreadyLogged": "You are already logged in",
+	"continue": "Continue with my session",
+	"exit": "Logout please"
 	},
 "admin-register" : {
 	"user": "User",
